--- a/.github/workflows/tf-plan-pr-comment.yaml
+++ b/.github/workflows/tf-plan-pr-comment.yaml
@@ -23,6 +23,7 @@ jobs:
 
     steps:
       - name: Delete old comments
+        uses: actions/github-script@v6.4.1
         continue-on-error: true
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
